--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.2.2
   google_fonts: ^6.2.1
   shimmer: ^3.0.0
+  flutter_slidable: ^4.0.0
 
 dev_dependencies:
   flutter_test:
