--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_slidable: ^4.0.0
   timeline_tile: ^2.0.0
   image_picker: ^1.1.2
+  multi_image_picker_view: ^2.0.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
